--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>title</title>
-  </head>
   <body>
-
-    <% @posts.all.each do |post| %>
-        <div>
-            <p><%= post.name%> </p>
-            <p><%= post.content %></p>
-        </div>
+    <h1>Posts</h1>
+    <% @posts.each do |post| %>
+      <strong><%= post.name %></strong><br />
+      <%= post.content %>
+      <br /><br />
     <% end %>
-
   </body>
-</html> 
+</html>
