--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -5,15 +5,13 @@
     <title>title</title>
   </head>
   <body>
-
-   <form method = "post" action="/posts/<%=@post.id%>">
-
-    <input id="hidden" type="hidden" name="_method" value="patch">
-    Name<input type = "text" value = "<%= @post.name%>" name="name">
-    Contents<input type="text" value="<%= @post.content%>" name = "content">
-    <input type="submit" value="submit">
-
-  </form>
-
+    <form action="/articles/<%= @article.id %>" method="post">
+      <input type="hidden" name="_method" value="patch">
+      <h3><label for="title">Title</label></h3>
+      <p><input type="text" id="title" name="article[title]" value="<%= @article.title %>"></p>
+      <h3><label for="content">Content</label></h3>
+      </p><textarea type="text" id="content" name="article[content]" value="<%= @article.content %>"></textarea></p>
+      <input type="submit" id="submit">
+    </form>
   </body>
 </html>
