--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <title>title</title>
+  </head>
   <body>
-    <h1>Posts</h1>
-    <% @posts.each do |post| %>
-      <strong><%= post.name %></strong><br />
-      <%= post.content %>
-      <br /><br />
+    <ul>
+    <% @articles.each do |article| %>
+    <li>
+    <a href="/articles/<%= article.id %>">
+      <%= article.title %> 
+    </a>
+    </li>
     <% end %>
+    </ul>
   </body>
 </html>
