--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <title>title</title>
+  </head>
   <body>
-    <form action='/posts' method="POST">
-      <label for "name">Name:</label>
-      <input type="text" id="name" name="name">
-      <br />
-      <label for "content">Content:</label>
-      <input type="text" id="content" name="content">
-      <br />
-      <input type="submit" value="submit" id="submit">
+    <form action="/articles" method="post">
+      <h3><label for="title">Title</label></h3>
+      <p><input type="text" id="title" name="title"></p>
+      <h3><label for="content">Content</label></h3>
+      <p><textarea type="text" id="content" name="content"></textarea></p>
+      <input type="submit" id="submit">
     </form>
   </body>
 </html>
